MDEV-28980 InnoDB: Failing assertion: len <= MAX_TABLE_NAME_LEN

dict_load_foreigns(): Use a correctly sized buffer for the maximum-length
SYS_FOREIGN.ID. In case of overflow, do not crash the server but instead
return DB_CORRUPTION.